Added User Preference framework for getting USE_HTTPS. There is no way to set the variable yet... The program correctly switches between https and http URI/Ls now.