@@ -12,6 +12,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.util.concurrent.*;
+import java.util.prefs.*;
 
 /**
  * @author robo
@@ -19,6 +20,11 @@ import java.util.concurrent.*;
  */
 @SuppressWarnings("unused")
 public class Functions {
+	
+	// Use the Robosane class to store user data.
+	static Preferences prefs = Preferences.userNodeForPackage(main.Robosane.class);
+	
+	final static String USE_HTTPS = "use_https";
 
 	/**
 	 * @param args
@@ -28,19 +34,30 @@ public class Functions {
 
 	}
 	
+	private static String getProtocol() {
+		if (!prefs.getBoolean(USE_HTTPS, false)) {
+			return "http://";
+		} else if (prefs.getBoolean(USE_HTTPS, false)) {
+			return "https://";
+		} else {
+			return null;
+		}
+	}
+	
+	private static void setHTTPS(boolean HTTPS) {
+		prefs.putBoolean(USE_HTTPS, HTTPS);
+	}
+	
 	public static void openWebpage(String url) {
 	    try {
-	        try {
-				openWebpage(new URL(url).toURI());
-			} catch (MalformedURLException e) {
-				System.err.println("Malformed URL Exception. How silly.");
-				e.printStackTrace();
-			}
+	        URI destination = new URI((getProtocol() + url));
+	        System.out.println("openWebpage() opening URI: " + destination);
+			openWebpage(destination);
 	    } catch (URISyntaxException e) {
 	        e.printStackTrace();
 	    }
 	}
-	
+
 	// Thanks to 'Vulcan' from Stackoverflow
 	public static void openWebpage(URI uri) {
 	    Desktop desktop = Desktop.isDesktopSupported() ? Desktop.getDesktop() : null;
